update ktlintTask