@@ -69,6 +69,7 @@ dependencies {
 }
 
 task ktlint(type: JavaExec, group: "verification") {
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
     mainClass.set("com.pinterest.ktlint.Main")
@@ -82,6 +83,7 @@ task ktlint(type: JavaExec, group: "verification") {
 check.dependsOn ktlint
 
 task ktlintFormat(type: JavaExec, group: "formatting") {
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
     mainClass.set("com.pinterest.ktlint.Main")
